fix(scss): align iadc theme with default
- content-layout aligned to use grid-template
- add missing macro-jira.scss in iadc template

--- a/src/assets/scss/_tables.scss
+++ b/src/assets/scss/_tables.scss
@@ -4,19 +4,19 @@ table.confluenceTable {
   position: relative;
   border-collapse: collapse;
   color: var(--font-color);
+  margin-left: 0;
+  margin-right: auto;
   width: 100%;
-  // max-width: var(--base-width);
-  table-layout: fixed;
 }
 
 table.confluenceTable th.confluenceTh {
   position: -webkit-sticky;
   position: sticky;
-  top: 0; /* Don't forget this, required for the stickiness */
+  top: 0; /* Required for the stickiness */
   z-index: 2;
   box-shadow: 0 3px 2px -1px rgba(0, 0, 0, 0.4);
   font-size: var(--main-font-size);
-  word-wrap: break-word;
+  word-wrap: normal;
 }
 
 .confluenceTh,
